--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
 </head>
 <body>
     <h1>Kinder World</h1>
+    <div class="container">
+        <div class="heading">
+            <h1 class="title">Kinder World</h1>
+            <div class="scores-container">
+                <div class="score-container">0</div>
+                <div class="best-container">0</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
