Removed unwanted comments

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <title>Kinder World</title>
 </head>
 <body>
-    <h1>Kinder World</h1>
     <div class="container">
         <div class="heading">
             <h1 class="title">Kinder World</h1>
             <div class="scores-container">
-                <div class="score-container">0</div>
-                <div class="best-container">0</div>
+                <div class="score-container">0 </div>
+                <div class="best-container">0-----</div>
             </div>
         </div>
     </div>
